--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
-    "laravel-echo": "^1.11.3",
+    "axios": "^0.26.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,7 +22,9 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "laravel-echo": "^1.11.3",
     "postcss": "^8.4.7",
+    "pusher-js": "^7.0.6",
     "tailwindcss": "^3.0.23"
   }
 }
